fix zindex on overlapping menu

--- a/mt-kit/core/css/src/components/_dropdown.scss
+++ b/mt-kit/core/css/src/components/_dropdown.scss
@@ -55,7 +55,7 @@
     top: 0;
     padding: 4.125rem var(--spacer-xx-small) var(--spacer-xx-small);
     background-color: var(--dropdown-content-bg);
-    z-index: var(--z-index-dropdown);
+    z-index: var(--z-index-feedback);
     right: 0;
     border: $border-width-regular solid var(--color-mt-blue);
 
